--- a/src/View/RegisterView.form
+++ b/src/View/RegisterView.form
@@ -41,7 +41,7 @@
                                   <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Group type="102" attributes="0">
                                       <Component id="WargaRadio" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -49,11 +49,9 @@
                                       <EmptySpace type="separate" max="-2" attributes="0"/>
                                       <Component id="PetugasRadio" min="-2" max="-2" attributes="0"/>
                                   </Group>
-                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                      <Component id="Username" pref="351" max="32767" attributes="0"/>
-                                      <Component id="Email" alignment="1" max="32767" attributes="0"/>
-                                      <Component id="Password" alignment="1" max="32767" attributes="0"/>
-                                  </Group>
+                                  <Component id="Email" alignment="0" pref="324" max="32767" attributes="0"/>
+                                  <Component id="Username" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="Password" alignment="0" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -63,7 +61,7 @@
                       <Component id="jButton1" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace pref="33" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
