--- a/src/View/ViewDashboard.form
+++ b/src/View/ViewDashboard.form
@@ -119,7 +119,7 @@
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Component id="btnTambahDataPengungsian" max="32767" attributes="0"/>
                           <Component id="btnUbahDataPengungsian" max="32767" attributes="0"/>
-                          <Component id="btnHapusDataPengungsian" min="-2" pref="76" max="-2" attributes="0"/>
+                          <Component id="btnHapusDataPengungsian" alignment="0" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace max="32767" attributes="0"/>
                   </Group>
